(Update): adds styling to user profile page to complete page design and adds margin top to the search bar to ensure it aligns correctly

--- a/src/components/search/SearchPlaceholder.module.css
+++ b/src/components/search/SearchPlaceholder.module.css
@@ -23,6 +23,7 @@
 @media screen and (min-width: 1120px) {
   .search-placeholder {
     margin: 0px 30px;
+    margin-top: 20px;
   }
 
   .search-placeholder-text {
